# tat_simulation

./: .gitignore  CMakeLists.txt  Co60.in  README.md  action.cc  action.hh  construction.cc  construction.hh  construction_1scint_cc  construction_1scint_hh  det.mac  detector.cc  detector.hh  drawCylinderSlices.mac  event.cc  event.hh  generator.cc  generator.hh  makescripts.py  parameterisation.cc  parameterisation.hh  physics.cc  physics.hh  plot_results_DNA.py  plot_results_PID.py  plot_results_SSB_DSB.py  plot_results_particles.ipynb  plot_results_particles.py  ranges_radii_dense.py  readResults.py  read_PS_file_1k.ipynb  read_PSfile.py  run.cc  run.hh  run.mac  score.mac  stepping.cc  stepping.hh  tat_sim.cc  vis.mac
Clustering/: CMakeLists.txt  DSBclusterSize_alpha_5MeV_8232.csv  alpha_5MeV_8232.csv  pyClustering.cc  ranges_radii_dense.py  readResults.py  run.py  runClustering.py  runClustering_refactor.py  runClustering_up.py  runClustering_up_new.py  runClustering_up_part.py  runClustering_up_proc.py  run_old.py  run_ref.py  run_up.py  run_up_new.py  run_up_part.py  run_up_proc.py  sugarPosTest.csv  test_root.py  test_runClustering.py  test_up.py
Clustering/include/: ClusterSBPoints_.hh  ClusteringAlgorithm.hh  SBPoint_.hh
Clustering/src/: ClusterSBPoints_.cc  ClusteringAlgorithm.cc  SBPoint_.cc
decay_simulation/: CMakeLists.txt  Co60.in  decaySim.cc  input_Atdecay.in  input_Atdecay_1k.in  input_Pbdecay.in
gamma_sim/: CMakeLists.txt  gammaSim.cc
geometryFiles/: complexGeometry.py  histonePositions_4x4_300nm.csv  plotChromatinFibreSection.py  (+1 more)
(+136 files in other folders)
